syntax = "proto3";
package networking.mesh.gloo.solo.io;
option go_package = "github.com/solo-io/gloo-mesh/pkg/api/networking.mesh.gloo.solo.io/v1";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

import "github.com/solo-io/skv2/api/core/v1/core.proto";
import "github.com/solo-io/gloo-mesh/api/common/v1/selectors.proto";
import "github.com/solo-io/gloo-mesh/api/networking/v1/request_matchers.proto";
import "github.com/solo-io/gloo-mesh/api/common/v1/validation_state.proto";
import "github.com/solo-io/gloo-mesh/api/networking/v1/status.proto";
import "github.com/solo-io/gloo-mesh/api/networking/v1/weighed_destination.proto";

import "extproto/ext.proto";
option (extproto.equal_all) = true;

// Applies L7 routing and post-routing configuration on selected network edges.
message DestinationPolicySpec {

    // Specify the Destinations (destinations) this DestinationPolicy applies to.
    // Omit to apply to all Destinations.
    repeated .common.mesh.gloo.solo.io.DestinationSelector destination_selector = 2;

    // Specify L7 routing and post-routing configuration.
    Policy policy = 4;

    // Specify L7 routing and post-routing configuration.
    message Policy {

        // Configure [outlier detection](https://www.envoyproxy.io/docs/envoy/latest/intro/arch_overview/upstream/outlier) on the selected destinations.
        OutlierDetection outlier_detection = 11;

        // Configure mTLS settings. If specified will override global default defined in Settings.
        MTLS mtls = 12;

        // Configure [outlier detection](https://www.envoyproxy.io/docs/envoy/latest/intro/arch_overview/upstream/outlier) on the selected destinations.
        message OutlierDetection {

            // The number of errors before a host is ejected from the connection pool. A default will be used if not set.
            uint32 consecutive_errors = 1;

            // The time interval between ejection sweep analysis. Format: `1h`/`1m`/`1s`/`1ms`. Must be >= `1ms`. A default will be used if not set.
            google.protobuf.Duration interval = 2;

            // The minimum ejection duration. Format: `1h`/`1m`/`1s`/`1ms`. Must be >= `1ms`. A default will be used if not set.
            google.protobuf.Duration base_ejection_time = 3;

            // The maximum percentage of hosts that can be ejected from the load balancing pool.
            // At least one host will be ejected regardless of the value. Must be between 0 and 100. A default will be used if not set.
            uint32 max_ejection_percent = 4;
        }

        // Configure mTLS settings on destinations. If specified this overrides the global default defined in Settings.
        message MTLS {

            // Istio TLS settings.
            Istio istio = 1;

            // Istio TLS settings.
            message Istio {

                // TLS connection mode
                TLSmode tls_mode = 1;

                // TLS connection mode. Enums correspond to those
                // [defined here](https://github.com/istio/api/blob/00636152b9d9254b614828a65723840282a177d3/networking/v1beta1/destination_rule.proto#L886)
                enum TLSmode {

                    // Do not originate a TLS connection to the upstream endpoint.
                    DISABLE = 0;

                    // Originate a TLS connection to the upstream endpoint.
                    SIMPLE = 1;

                    // Secure connections to the upstream using mutual TLS by presenting
                    // client certificates for authentication.
                    // This mode uses certificates generated
                    // automatically by Istio for mTLS authentication. When this mode is
                    // used, all other fields in `ClientTLSSettings` should be empty.
                    ISTIO_MUTUAL = 2;
                };
            }
        }
    }
}

message DestinationPolicyStatus {

    // The most recent generation observed in the the DestinationPolicy metadata.
    // If the `observedGeneration` does not match `metadata.generation`, Gloo Mesh has not processed the most
    // recent version of this resource.
    int64 observed_generation = 1;

    // The state of the overall resource.
    // It will only show accepted if it has been successfully applied to all selected Destinations.
    .common.mesh.gloo.solo.io.ApprovalState state = 2;

    // Any errors found while processing this generation of the resource.
    repeated string errors = 3;
}
